# R-type

./: .gitignore  .travis.yml  ASystem_8cpp.html  ASystem_8cpp__incl.map  ASystem_8cpp__incl.md5  ASystem_8hpp.html  ASystem_8hpp__dep__incl.map  ASystem_8hpp__dep__incl.md5  ASystem_8hpp__incl.map  ASystem_8hpp__incl.md5  ASystem_8hpp_source.html  AUDPNetwork_8cpp.html  AUDPNetwork_8cpp__incl.map  AUDPNetwork_8cpp__incl.md5  AUDPNetwork_8hpp.html  AUDPNetwork_8hpp__dep__incl.map  AUDPNetwork_8hpp__dep__incl.md5  AUDPNetwork_8hpp__incl.map  AUDPNetwork_8hpp__incl.md5  AUDPNetwork_8hpp_source.html  Acceleration_8cpp.html  Acceleration_8cpp__incl.map  Acceleration_8cpp__incl.md5  Acceleration_8hpp.html  Acceleration_8hpp__dep__incl.map  Acceleration_8hpp__dep__incl.md5  Acceleration_8hpp__incl.map  Acceleration_8hpp__incl.md5  Acceleration_8hpp_source.html  Actions_8hpp.html  Actions_8hpp__dep__incl.map  Actions_8hpp__dep__incl.md5  Actions_8hpp_source.html  AnimationSystem_8cpp.html  AnimationSystem_8cpp__incl.map  AnimationSystem_8cpp__incl.md5  AnimationSystem_8hpp.html  AnimationSystem_8hpp__dep__incl.map  AnimationSystem_8hpp__dep__incl.md5  AnimationSystem_8hpp__incl.map  (+2211 more)
.circleci/: config.yml
.github/workflows/: ccpp.yml
Documentation/: RFCrtype.txt  r-type rfc.mkd  r-type rfc.txt
Documentation/UML/: Component.uml.txt  Entity.uml.txt
docs/: ASystem_8cpp.html  ASystem_8hpp.html  ASystem_8hpp_source.html  Acceleration_8cpp.html  Acceleration_8hpp.html  Acceleration_8hpp_source.html  Animator_8cpp.html  Animator_8hpp.html  Animator_8hpp_source.html  Button_8cpp.html  Button_8hpp.html  Button_8hpp_source.html  ClassA_8hpp.html  ClassA_8hpp_source.html  ClassB_8hpp.html  ClassB_8hpp_source.html  Collision_8cpp.html  Collision_8hpp.html  Collision_8hpp_source.html  ComponentExceptions_8cpp.html  ComponentExceptions_8hpp.html  ComponentExceptions_8hpp_source.html  ComponentManager_8cpp.html  ComponentManager_8hpp.html  ComponentManager_8hpp_source.html  Controller_8cpp.html  Controller_8hpp.html  Controller_8hpp_source.html  Damage_8cpp.html  Damage_8hpp.html  Damage_8hpp_source.html  DisplaySystem_8cpp.html  DisplaySystem_8hpp.html  DisplaySystem_8hpp_source.html  DummyInput_8cpp.html  DummyInput_8hpp.html  DummyInput_8hpp_source.html  ECSExceptions_8cpp.html  ECSExceptions_8hpp.html  ECSExceptions_8hpp_source.html  (+388 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  files_0.js  (+41 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+96 more)
src/: CMakeLists.txt  ClassA.hpp  ClassB.hpp  Ecs.cpp  Ecs.hpp  IEcs.hpp  Rtype.cpp  Rtype.hpp  main_client.cpp  main_dlloader.cpp  main_server.cpp
src/Components/: IComponent.hpp
src/Components/IO/: IIO.hpp  (+16 more)
src/Entities/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  IEntityManager.hpp
src/Entities/EntityConstructor/PlayerEntity/: CMakeLists.txt  PlayerEntity.cpp  PlayerEntity.hpp
src/Entities/EntityConstructor/TestEntity/: CMakeLists.txt  TestEntity.cpp  TestEntity.hpp
src/Entities/EntityConstructor/TestEntity2/: CMakeLists.txt  TestEntity2.cpp  TestEntity2.hpp
src/Exceptions/: ComponentExceptions.cpp  ComponentExceptions.hpp  ECSExceptions.cpp  ECSExceptions.hpp  EntityExceptions.cpp  EntityExceptions.hpp  RTypeExceptions.cpp  RTypeExceptions.hpp  ServerExceptions.cpp  ServerExceptions.hpp  SystemExceptions.cpp  SystemExceptions.hpp
src/FactoriesWrapper/: FactoriesWrapper.cpp  FactoriesWrapper.hpp
src/Loader/: DlLoader.hpp  EntitiesLoader.cpp  EntitiesLoader.hpp  ILoader.hpp  SystemLoader.cpp  SystemLoader.hpp
src/ManagerWrapper/: IManagerWrapper.hpp  ManagerWrapper.cpp  ManagerWrapper.hpp
src/Network/: AUDPNetwork.cpp  AUDPNetwork.hpp  PacketManager.cpp  PacketManager.hpp
src/Render/: Color.hpp  IRenderManager.hpp  Input.hpp  SFMLRenderManager.cpp  SFMLRenderManager.hpp
src/ResourceManager/: Font.cpp  Font.hpp  IAudio.hpp  IFont.hpp  IText.hpp  ITexture.hpp  Music.cpp  Music.hpp  ResourceManager.cpp  ResourceManager.hpp  RtypeResources.cpp  RtypeResources.hpp  Sound.cpp  Sound.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp
src/RessourceManager/: Font.cpp  Music.cpp  Music.hpp  RessourceManager.hpp  Sound.cpp  Sound.hpp
src/Room/: Room.cpp  Room.hpp  RoomManager.cpp  RoomManager.hpp
src/Scenes/: ChooseRoomScene.cpp  ChooseRoomScene.hpp  DefeatScene.cpp  DefeatScene.hpp  GameScene.cpp  GameScene.hpp  IScene.hpp  MenuScene.cpp  MenuScene.hpp  SceneManager.cpp  SceneManager.hpp
src/Systems/: ASystem.cpp  ASystem.hpp  ISystem.hpp
src/Systems/SystemConstructor/Display/: CMakeLists.txt  DisplaySystem.cpp  DisplaySystem.hpp
src/Systems/SystemConstructor/testSystem/: CMakeLists.txt  testSystem.cpp  testSystem.hpp
src/TestNetwork/: TestNetwork.cpp  TestNetwork.hpp
src/Thread/: Room.cpp  Room.hpp  Task.hpp  ThreadPool.cpp  ThreadPool.hpp  Worker.hpp
src/Utils/: Actions.hpp  Rect.cpp  Rect.hpp
src/utils/: Rect.cpp  Rect.hpp
tests/: .gitignore  CMakeLists.txt  install_criterion.sh
tests/src/: test.cpp  testComponentManager.cpp  testDeserialization.cpp  testEntity.cpp  testEntityConstructor.cpp  testEntityManager.cpp  testExceptions.cpp  testPacketManager.cpp  testResourceManager.cpp  testSerialization.cpp  testSystemConstructor.cpp  testTimer.cpp
(+205 files in other folders)
